Add route and switch and update styles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,3 +2,12 @@
     font-family: "Lora", sans-serif;
     min-height: 100vh;
 }
+
+.Main {
+    padding-top: 80px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
