--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -2,3 +2,14 @@
     background-color: white;
     border: 1px solid #c8c8ca8c;
 }
+
+i {
+    color: #c8c8ca8c;
+}
+.NavLink {
+    padding: 5px;
+}
+
+.Active i {
+    color: black;
+}
