--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,5 +1,13 @@
 .Avatar {
-    border-radius: 50%;
-    margin: 0px 8px 0px 8px;
-    object-fit: cover;
+  border-radius: 50%;
+  margin: 0px 8px 0px 8px;
+  object-fit: cover;
+}
+
+.Name {
+  font-size: 110;
+}
+
+.Title {
+  font-size: 70%;
 }
