--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,25 +1,36 @@
 .App {
-    font-family: "Lora", sans-serif;
-    min-height: 100vh;
+  font-family: "Lora", sans-serif;
+  min-height: 100vh;
 }
 
 .Main {
-    padding-top: 90px;
+  padding-top: 90px;
 }
 
 .Alert {
-    border-radius: 0%;
+  border-radius: 0%;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 a:hover {
-    text-decoration: none;
-    color: #c8c8ca8c;
+  text-decoration: none;
+  color: #c8c8ca8c;
+}
+
+.Right {
+  float: right;
+}
+
+.Date{
+    font-size: 70%;
+}
+.ActionArea {
+  width: 100%;
 }
