--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,16 +1,36 @@
 .Button {
-    border: 1px solid #c8c8ca8c;
-    background-color: black;
-    color: white;
-    border-radius: 0%;
+  border: 1px solid #c8c8ca8c;
+  background-color: black;
+  color: white;
+  border-radius: 0%;
 }
 
 .Lg {
-    width: 100%;
+  width: 100%;
 }
 
-.Button:hover{
-    border: 1px solid black;
-    background-color: white;
-    color: black;
+.Button:hover {
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+}
+
+.Option {
+  color: #c8c8ca8c;
+}
+.Option:hover {
+  color: black;
+}
+
+.Clicked {
+  color: black;
+}
+.Clicked:hover {
+  color: c8c8ca8c;
+}
+.NotClicked {
+  color: #c8c8ca8c;
+}
+.NotClicked:hover {
+  color: black;
 }
