--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,3 +1,10 @@
+.Profile {
+  display: flex;
+  flex-direction: row;
+  padding: 3px;
+  box-sizing: border-box;
+}
+
 .Avatar {
   border-radius: 50%;
   margin: 0px 8px 0px 8px;
@@ -6,8 +13,12 @@
 
 .Name {
   font-size: 110;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
 }
 
-.Title {
+.Text {
   font-size: 70%;
+  display: block;
 }
