Update loader view and styling

--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -1,8 +1,5 @@
 .Outer {
-  width: 100%;
-  text-align: center;
-}
-
-.Inner {
-  display: inline-block;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
