--- a/src/App.module.css
+++ b/src/App.module.css
@@ -37,7 +37,7 @@ a:hover {
 
 .Info {
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   align-items: center;
   padding-right: 5px;
   font-size: 80%;
