--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -15,7 +15,7 @@
   font-size: 110;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .Text {
