Change text transform attr of navbar

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,7 +1,7 @@
 .NavBar {
   background-color: white;
   border: 1px solid #c8c8ca8c;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .NavBar i {
